--- a/sc2_config.yml
+++ b/sc2_config.yml
@@ -1,7 +1,6 @@
-step_mul: 8  # 180 APM
-screen:  # at least 64^2 resolution is recommended to be playable for regular map
-    y_res: 32  # use 32^32 for mini games here
-    x_res: 32
-minimap:
-    y_res: 32
-    x_res: 32
+dev:
+    step_mul: 8  # 180 APM
+    resl: 32  # at least 64^2 resolution is recommended to be playable for regular map, use 32^32 for mini games here
+test:
+    step_mul: 8
+    resl: 4
