--- a/configs/sc2_config.yml
+++ b/configs/sc2_config.yml
@@ -8,11 +8,11 @@ lite:
     step_mul: 8
     resl: 32
     action_list: [1, 2, 3, 4, 7, 12, 13, 274, 331, 332, 333, 334, 451, 452, 453]
-    minimap_imgs: []
-    screen_imgs: []
+    minimap_imgs: [1, 3, 4, 5, 6]
+    screen_imgs: [1, 4, 5, 6, 7, 8, 9]
 test:
     step_mul: 8
     resl: 8
     action_list: [1, 2, 3, 4, 7, 12, 13, 274, 331, 332, 333, 334, 451, 452, 453]
-    minimap_imgs: []
-    screen_imgs: []
+    minimap_imgs: [1, 3, 4, 5, 6]
+    screen_imgs: [1, 4, 5, 6, 7, 8, 9]
